Bug 1936829 - [devtools] Lower specificity of a rule to fix menu item hover color in High Contrast Mode. r=devtools-reviewers,bomsy.
Differential Revision: https://phabricator.services.mozilla.com/D231947

--- a/devtools/client/themes/tooltips.css
+++ b/devtools/client/themes/tooltips.css
@@ -620,7 +620,12 @@ strong {
     }
   }
 
-  .menuitem > button.command:is([role="menuitem"],[role="menuitemcheckbox"],[role="link"]) {
+  /* Use :where to avoid having a high specificity that would take over the rule above */
+  .menuitem > button.command:where(
+    [role="menuitem"],
+    [role="menuitemcheckbox"],
+    [role="link"]
+  ) {
     appearance: none;
     border: none;
     background-color: transparent;
